Monitoring/customizations/monitoring/grafana/esp-plugin/grafana-esp-plugin-main/install/manifests/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/session-cookie-samesite: "Lax"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"
spec:
  ingressClassName: nginx
  rules:
    - host: kc4-oracle.contour.espsc-kc5-m1.espstudio.sashq-d.openstack.sas.com
      http:
        paths:
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  name: grafana
  tls:
    - hosts:
        - "kc4-oracle.contour.espsc-kc5-m1.espstudio.sashq-d.openstack.sas.com"
